test/samples/invalid/garbage_at_start.warning.sol
contract Foo {
    /// blah #if_succeeds true;
    function foo() public {}
}
